@@ -335,7 +335,7 @@ static void fprint_ed2k_url(FILE* out, struct file_info *info, int print_type)
 		dst += 32;
 	}
 	strcpy(dst, "|/");
-	fprintf(out, "%s", buf);
+	rsh_fprintf(out, "%s", buf);
 	free(buf);
 }
 
@@ -355,7 +355,7 @@ static void fprintI64(FILE* out, uint64_t filesize, int width, int zero_pad)
 	if (len < width && zero_pad) {
 		memset(buf, '0', width-len);
 	}
-	fprintf(out, "%s", buf);
+	rsh_fprintf(out, "%s", buf);
 	free(buf);
 }
 
@@ -375,7 +375,7 @@ static void print_time(FILE *out, time_t time)
 		t->tm_hour = t->tm_min = t->tm_sec =
 			t->tm_year = t->tm_mon = t->tm_mday = 0;
 	}
-	fprintf(out, "%02u:%02u.%02u %4u-%02u-%02u", t->tm_hour, t->tm_min,
+	rsh_fprintf(out, "%02u:%02u.%02u %4u-%02u-%02u", t->tm_hour, t->tm_min,
 		t->tm_sec, (1900 + t->tm_year), t->tm_mon + 1, t->tm_mday);
 }
 
@@ -422,23 +422,23 @@ void print_line(FILE* out, print_item* list, struct file_info *info)
 			assert(len < sizeof(buffer));
 
 			/* output the hash, exit on fail */
-			if (fwrite(buffer, 1, len, out) != len) break;
+			rsh_fwrite(buffer, 1, len, out);
 			continue;
 		}
 
 		/* output other special items: filepath, URL-encoded filename etc. */
 		switch (print_type) {
 			case PRINT_STR:
-				fprintf(out, "%s", list->data);
+				rsh_fprintf(out, "%s", list->data);
 				break;
 			case PRINT_ZERO: /* the '\0' character */
-				fprintf(out, "%c", 0);
+				rsh_fprintf(out, "%c", 0);
 				break;
 			case PRINT_FILEPATH:
-				fprintf(out, "%s", info->print_path);
+				rsh_fprintf(out, "%s", info->print_path);
 				break;
 			case PRINT_BASENAME: /* the filename without directory */
-				fprintf(out, "%s", basename);
+				rsh_fprintf(out, "%s", basename);
 				break;
 			case PRINT_URLNAME: /* URL-encoded filename */
 				if (!url) {
@@ -446,7 +446,7 @@ void print_line(FILE* out, print_item* list, struct file_info *info)
 					url = (char*)rsh_malloc(urlencode(NULL, tmp) + 1);
 					urlencode(url, tmp);
 				}
-				fprintf(out, "%s", url);
+				rsh_fprintf(out, "%s", url);
 				break;
 			case PRINT_MTIME: /* the last-modified tine of the filename */
 				print_time64(out, info->file->mtime);
@@ -654,9 +654,9 @@ int print_sfv_header_line(FILE* out, file_t* file, const char* printpath)
 	if (printpath[0] == '.' && IS_PATH_SEPARATOR(printpath[1])) printpath += 2;
 
 	sprintI64(buf, file->size, 12);
-	fprintf(out, "; %s  ", buf);
+	rsh_fprintf(out, "; %s  ", buf);
 	print_time64(out, file->mtime);
-	fprintf(out, " %s\n", printpath);
+	rsh_fprintf(out, " %s\n", printpath);
 	return 0;
 }
 
@@ -671,9 +671,9 @@ void print_sfv_banner(FILE* out)
 	time_t cur_time = time(NULL);
 	struct tm *t = localtime(&cur_time);
 	if (t) {
-		fprintf(out, _("; Generated by %s v%s on %4u-%02u-%02u at %02u:%02u.%02u\n"),
+		rsh_fprintf(out, _("; Generated by %s v%s on %4u-%02u-%02u at %02u:%02u.%02u\n"),
 			PROGRAM_NAME, get_version_string(),
 			(1900 + t->tm_year), t->tm_mon + 1, t->tm_mday, t->tm_hour, t->tm_min, t->tm_sec);
-		fprintf(out, _("; Written by Kravchenko Aleksey (Akademgorodok) - http://rhash.sf.net/\n;\n"));
+		rsh_fprintf(out, _("; Written by Kravchenko Aleksey (Akademgorodok) - http://rhash.sf.net/\n;\n"));
 	}
 }
