@@ -1,3 +1,6 @@
+Sat Jul 29 2017 Aleksey
+	* improve utf-8 support on Windows
+
 Thu Jul 27 2017 Aleksey
 	* Bugfix: fix access to long paths on Windows
 
